syntax = "proto3";
package custom_event;

message CustomEvent {
  uint64 id = 1;
  int64  created_at = 2;
  uint64  created_by = 3;
  optional int64  updated_at = 4;
  optional uint64 updated_by = 5;
  uint64 project_id = 6;
  repeated string tags = 7;
  string name = 8;
  optional string description = 9;
  Status status = 10;
  bool is_system = 11;
  repeated Event events = 12;
}

enum Status {
  NONE = 0;
  ENABLED = 1;
  DISABLED = 2;
}

message Event {
  optional string regular_name = 1;
  optional uint64 regular = 2;
  optional uint64 custom = 3;
  repeated PropValueFilter filters = 4;
}

message PropValueFilter {
  optional string property_name = 1;
  optional uint64 property_group = 2;
  optional uint64 property_custom_id = 3;
  PropValueOperation operation = 4;
  repeated Value value = 5;
}

message Value {
  optional string string = 1;
  optional int64 int8 = 2;
  optional int64 int16 = 3;
  optional int64 int32 = 4;
  optional int64 int64 = 5;
  optional bytes decimal = 6;
  optional uint32 bool = 7;
  optional int64 timestamp = 8;
}

enum PropValueOperation {
  None = 0;
  EQ = 1;
  NEQ = 2;
  GT = 3;
  GTE = 4;
  LT = 5;
  LTE = 6;
  TRUE = 7;
  FALSE = 8;
  EXISTS = 9;
  EMPTY = 10;
  LIKE = 11;
  NOT_LIKE = 12;
  REGEX = 13;
  NOT_REGEX = 14;
}